check if parentField.type is defined
Got an error that said that parentField was an empty array so type didn't exist, so made a check for that

--- a/supertable/templates/_integrations/feedme/fields/supertable.html
+++ b/supertable/templates/_integrations/feedme/fields/supertable.html
@@ -2,7 +2,7 @@
     {% for blocktypefield in blocktype.getFields() %}
 
         {# Special-case when inside Matrix #}
-        {% if parentField is defined and parentField.type == 'Matrix' %}
+        {% if parentField is defined and parentField.type is defined and parentField.type == 'Matrix' %}
             {% set handlePrefix = parentField.handle ~ '--' ~ parentBlocktype.handle ~ '--' ~ field.handle ~ '--' ~ blocktype.id ~ '--' %}
             {% set labelName = parentField.name ~ ': ' ~ parentBlocktype.name ~ ': ' ~ field.name ~ ': ' ~ blocktypefield.name %}
             {% set labelHandle = parentField.handle ~ '[' ~ parentBlocktype.handle ~ '][' ~ field.handle ~ '][' ~ blocktypefield.handle ~ ']' %}
